<resources>

    <!-- Application-->
    <string name="app_name">Welltec Employee Planner</string>
    <string name="app_name_short">W E P</string>
    <string name="app_version_txt">Application version: 1.0</string>

    <!-- Navigation support titles -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_user_name_text">Second FaceT</string>
    <string name="nav_header_user_email_text">2ndfacet@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Menu titles -->
    <string name="menu_notifications">Notifications</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_employees">Employees</string>
    <string name="menu_sign_out">Sign Out</string>

    <!-- TXT -->
    <string name="txt_welltec">Welltec</string>
    <string name="txt_employee">Employee</string>
    <string name="txt_planner">Planner</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_or">or</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_sign_out">Sign Out</string>
    <string name="txt_guest">Guest</string>
    <string name="txt_my_profile">My Profile</string>
    <string name="txt_guests">Guests</string>
    <string name="txt_undefined">undefined</string>
    <string name="txt_notification">Notification</string>
    <string name="txt_course">Course</string>
    <string name="txt_location">Location</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_welcome">Welcome to Welltec Employee Planner!</string>
    <string name="txt_unused">Unused</string>
    <string name="txt_add">Add</string>
    <string name="txt_choice_employee">Choice Employee</string>
    <string name="txt_select">Select</string>
    <string name="txt_choice_location">Choice Location</string>
    <string name="txt_choice_course">Choice Course</string>
    <string name="txt_space">\u0020\u0020\u0020</string>

    <!-- Hints -->
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_first">First Name</string>
    <string name="hint_second">Second Name</string>
    <string name="hint_position">Position</string>
    <string name="hint_course_name">Course Name</string>
    <string name="hint_desc">Description</string>
    <string name="hint_course_period">Validity period (in years)</string>
    <string name="hint_location_name">Location Name</string>
    <string name="hint_notification_name">Notification Name</string>
    <string name="hint_phone">Work Phone Number</string>
    <string name="hint_re_password">Repeat your password</string>
    <string name="hint_pass_date">Input the course pass date</string>

    <!-- Add Employee Fragment -->
    <string-array name="employee_role">
        <item>Guest</item>
        <item>User</item>
        <item>Coordinator</item>
        <item>Safety Engineer</item>
    </string-array>

    <!-- Adds -->
    <string name="add_course">Add course</string>
    <string name="add_location">Add location</string>
    <string name="add_notification">Add notification</string>
    <string name="add_employee">Add employee</string>

    <!-- No content -->
    <string name="no_location">No location selected yet</string>
    <string name="no_courses">No courses added yet</string>
    <string name="no_employees">No employees added yet</string>
    <string name="no_notifications">No notifications added yet</string>
    <string name="no_employees_to_course">No employees passed this course yet</string>
    <string name="no_employees_to_viewed">No employees viewed it yet</string>
    <string name="no_photo">No photo</string>

    <!-- Titles -->
    <string name="title_location">Location:</string>
    <string name="title_courses">Courses:</string>
    <string name="title_employees_to_location">Employees in the location:</string>
    <string name="title_employees_to_course">Employees who passed this course:</string>
    <string name="title_employees_to_viewed">Employees who viewed it:</string>
    <string name="title_role">App role:\u0020</string>
    <string name="title_valid_period">Valid period:\u0020</string>

    <!-- Info -->
    <string name="fragment_notification_info">The notification is <b>viewed</b> when you open the full version (the current screen)</string>
    <string name="fragment_registration_info">You will be registered as a <b>guest</b> and will not be able to view the information. After registration and verification of mail, wait until the coordinator changes your status or ask him about it</string>
    <string name="fragment_signout_info">Are you sure want to log out? \n\n For re-authorization you will need to enter your e-mail and password</string>
    <string name="info_guest_deny">You are a <b>guest</b> and cannot view this information. If you are a Welltec employee, wait until the coordinator changes your status or ask him about it</string>

    <!-- Errors -->
    <string name="error_empty">Can\'t be empty</string>
    <string name="error_short">Can\'t be less that 8 characters</string>
    <string name="error_load">Error loading data \n\nCheck your internet connection and try again \n\nThere may be interruptions in receiving data if you have an android version below 6.0.1</string>
    <string name="error_differ_password">The entered passwords do not match</string>
    <string name="error_email">Please enter valid e-mail</string>

    <!-- Toasts -->
    <string name="toast_verify_email">Please verify your e-mail address</string>
    <string name="toast_auth_fail">Authentication failed. Check e-mail and password or try again after some time</string>
    <string name="toast_register_success">You have successfully registered. Verify you e-mail</string>
    <string name="toast_register_fail">Registration failed. Try again after some time</string>

    <!-- Unused -->
    <string name="menu_share">Share</string>
    <string name="txt_loading">Loading...</string>

</resources>
