<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_courses"
            android:title="@string/menu_courses" />
        <item
            android:id="@+id/nav_locations"
            android:title="@string/menu_locations" />
        <item
            android:id="@+id/nav_employees"
            android:title="@string/menu_employees" />
    </group>

    <item android:title="Unused">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_signout"
                android:title="@string/menu_sign_out" />
        </menu>
    </item>

</menu>
