<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notifications">

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.ifeor.welltecemployeeplanner.ui.notification.list.NotificationListFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notification_list" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.ifeor.welltecemployeeplanner.ui.course.list.CourseListFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_course_list" />

    <fragment
        android:id="@+id/nav_locations"
        android:name="com.ifeor.welltecemployeeplanner.ui.location.list.LocationListFragment"
        android:label="@string/menu_locations"
        tools:layout="@layout/fragment_location_list" />

    <fragment
        android:id="@+id/nav_employees"
        android:name="com.ifeor.welltecemployeeplanner.ui.employee.list.EmployeeListFragment"
        android:label="@string/menu_employees"
        tools:layout="@layout/fragment_employee_list" />

    <fragment
        android:id="@+id/nav_guests"
        android:name="com.ifeor.welltecemployeeplanner.ui.employee.guest.GuestListFragment"
        android:label="@string/txt_guests"
        tools:layout="@layout/fragment_guest_list" />

    <fragment
        android:id="@+id/nav_add_notification"
        android:name="com.ifeor.welltecemployeeplanner.ui.notification.add.NotificationAddFragment"
        android:label="Add notification"
        tools:layout="@layout/fragment_notification_add" />

    <fragment
        android:id="@+id/nav_add_course"
        android:name="com.ifeor.welltecemployeeplanner.ui.course.add.CourseAddFragment"
        android:label="Add course"
        tools:layout="@layout/fragment_course_add" />

    <fragment
        android:id="@+id/nav_add_location"
        android:name="com.ifeor.welltecemployeeplanner.ui.location.add.LocationAddFragment"
        android:label="Add location"
        tools:layout="@layout/fragment_location_add" />

    <fragment
        android:id="@+id/nav_signout"
        android:name="com.ifeor.welltecemployeeplanner.ui.auth.signout.SignOutFragment"
        android:label="@string/menu_sign_out"
        tools:layout="@layout/fragment_signout" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.ifeor.welltecemployeeplanner.ui.notification.item.NotificationFragment"
        android:label="@string/txt_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_course"
        android:name="com.ifeor.welltecemployeeplanner.ui.course.item.CourseFragment"
        android:label="@string/txt_course"
        tools:layout="@layout/fragment_course" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.ifeor.welltecemployeeplanner.ui.location.item.LocationFragment"
        android:label="@string/txt_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/nav_employee"
        android:name="com.ifeor.welltecemployeeplanner.ui.employee.item.EmployeeFragment"
        android:label="@string/txt_employee"
        tools:layout="@layout/fragment_employee" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ifeor.welltecemployeeplanner.ui.employee.profile.ProfileFragment"
        android:label="@string/txt_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_choice_employee_to_location"
        android:name="com.ifeor.welltecemployeeplanner.ui.employee.toLocation.EmployeeToLocationFragment"
        android:label="@string/txt_choice_employee"
        tools:layout="@layout/fragment_employee_list" />

    <fragment
        android:id="@+id/nav_choice_employee_to_course"
        android:name="com.ifeor.welltecemployeeplanner.ui.employee.toCourse.EmployeeToCourseFragment"
        android:label="@string/txt_choice_employee"
        tools:layout="@layout/fragment_choice_employee" />

    <fragment
        android:id="@+id/nav_choice_location"
        android:name="com.ifeor.welltecemployeeplanner.ui.location.toEmployee.LocationToEmployeeFragment"
        android:label="@string/txt_choice_location"
        tools:layout="@layout/fragment_choice_location" />

    <fragment
        android:id="@+id/nav_choice_course"
        android:name="com.ifeor.welltecemployeeplanner.ui.course.toEmployee.CourseToEmployeeFragment"
        android:label="@string/txt_choice_course"
        tools:layout="@layout/fragment_choice_course" />


    <fragment
        android:id="@+id/nav_share"
        android:name="com.ifeor.welltecemployeeplanner.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

</navigation>
