<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_notification"
        android:orderInCategory="100"
        android:title="@string/add_notification"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_employee"
        android:orderInCategory="100"
        android:title="@string/add_employee"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_course"
        android:orderInCategory="100"
        android:title="@string/add_course"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_location"
        android:orderInCategory="100"
        android:title="@string/add_location"
        app:showAsAction="never" />

</menu>
