<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notifications">

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.ifeor.welltecemployeeplanner.ui.fragments.NotificationListFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notification_list" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.ifeor.welltecemployeeplanner.ui.fragments.CourseListFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_course_list" />

    <fragment
        android:id="@+id/nav_locations"
        android:name="com.ifeor.welltecemployeeplanner.ui.fragments.LocationListFragment"
        android:label="@string/menu_locations"
        tools:layout="@layout/fragment_location_list" />

    <fragment
        android:id="@+id/nav_employees"
        android:name="com.ifeor.welltecemployeeplanner.ui.fragments.EmployeeListFragment"
        android:label="@string/menu_employees"
        tools:layout="@layout/fragment_employee_list" />




    <fragment
        android:id="@+id/nav_share"
        android:name="com.ifeor.welltecemployeeplanner.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.ifeor.welltecemployeeplanner.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

</navigation>
