<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/std_indention">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fragment_registration_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/fragment_registration_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_second"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/fragment_registration_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_position"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/fragment_registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:importantForAutofill="no"
                android:inputType="textWebEmailAddress" />

            <EditText
                android:id="@+id/fragment_registration_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:importantForAutofill="no"
                android:inputType="phone" />

            <EditText
                android:id="@+id/fragment_registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/fragment_registration_re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_re_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/fragment_registration_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_margin="@dimen/std_indention"
                android:text="@string/txt_sign_up"
                android:textSize="@dimen/std_textsize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_registration_info"
                android:layout_margin="@dimen/std_indention"
                android:textSize="@dimen/std_textsize" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
