<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragment_auth_title_welltec"
        style="@style/activity_login_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_welltec"
        android:layout_marginTop="60dp"
        app:layout_constraintHorizontal_bias="0.35"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/fragment_auth_title_employee"
        style="@style/activity_login_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_employee"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_auth_title_welltec"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/fragment_auth_title_planner"
        style="@style/activity_login_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_planner"
        app:layout_constraintHorizontal_bias="0.65"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_auth_title_employee"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/fragment_auth_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:importantForAutofill="no"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_auth_title_planner"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/fragment_auth_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/hint_password"
        android:imeActionLabel="@string/txt_sign_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:importantForAutofill="no"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_auth_username"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/fragment_auth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"

        android:enabled="false"
        android:text="@string/txt_sign_in"
        android:background="@color/colorPrimary"
        app:layout_constraintVertical_bias="0.2"

        app:layout_constraintTop_toBottomOf="@+id/fragment_auth_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/fragment_auth_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_or"
        android:layout_margin="@dimen/std_indention"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_auth_button"/>

    <TextView
        android:id="@+id/fragment_auth_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sign_up"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_auth_or" />

    <ProgressBar
        android:id="@+id/activity_login_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
