<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragment_signout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lrg_indention"
        android:layout_marginStart="@dimen/std_indention"
        android:layout_marginEnd="@dimen/std_indention"
        android:textAlignment="center"
        android:textSize="@dimen/std_textsize"
        android:text="@string/fragment_signout_info"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment_signout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sign_out"
        android:textSize="@dimen/std_textsize"
        android:background="@android:color/holo_red_light"
        android:layout_marginTop="@dimen/lrg_indention"
        android:padding="@dimen/std_indention"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_signout_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version_txt"
        android:textSize="@dimen/std_textsize"
        android:layout_marginBottom="@dimen/std_indention"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
