<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/std_indention"
        android:layout_marginTop="@dimen/std_indention"
        android:layout_marginEnd="@dimen/std_indention"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/std_indention">

            <ImageView
                android:id="@+id/fragment_employee_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/no_photo"
                android:layout_marginStart="@dimen/std_indention"
                android:layout_marginEnd="@dimen/std_indention"
                android:layout_gravity="center"
                android:minWidth="96dp"
                android:minHeight="96dp"
                android:maxWidth="144dp"
                android:maxHeight="144dp"
                android:src="@mipmap/ic_no_photo_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_employee_name"
                    style="@style/lrg_titles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Alexander Ulianov"
                    android:layout_gravity="end" />

                <TextView
                    android:id="@+id/fragment_employee_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/std_textsize"
                    android:layout_gravity="end"
                    tools:text="Engineer"/>

                <TextView
                    android:id="@+id/fragment_employee_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/std_textsize"
                    android:layout_gravity="end"
                    tools:text="alexulianov@welltec.wep"/>

                <TextView
                    android:id="@+id/fragment_employee_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/std_textsize"
                    android:layout_gravity="end"
                    tools:text="+7(777)777-77-77"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="end">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/std_textsize"
                        android:layout_gravity="end"
                        android:text="@string/title_role"/>

                    <TextView
                        android:id="@+id/fragment_employee_role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/std_textsize"
                        android:layout_gravity="end"
                        tools:text="@string/txt_guest"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/std_indention"
        android:layout_marginTop="@dimen/std_indention"
        android:layout_marginEnd="@dimen/std_indention"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/std_indention">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/lrg_titles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_location" />

                <TextView
                    android:id="@+id/fragment_employee_select_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_select"
                    android:textSize="20sp"
                    android:layout_gravity="end"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

            <TextView
                android:id="@+id/fragment_employee_no_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/std_textsize"
                android:text="@string/no_location"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_indention"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/std_indention">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/lrg_titles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_courses" />

                <TextView
                    android:id="@+id/fragment_employee_add_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_add"
                    android:textSize="20sp"
                    android:layout_gravity="end"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

            <TextView
                android:id="@+id/fragment_employee_no_courses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/std_textsize"
                android:text="@string/no_courses"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/employee_course_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
